# IndoorNav

./: .gitignore
DWM1000_LIB/src/: DW1000.cpp  DW1000.h  DW1000Ranging.cpp  DW1000Ranging.h
ESP32-DWM1000/Sketches/Anchor/anchor_1/: anchor_1.ino
ESP32-DWM1000/Sketches/BasicSender/: BasicSender.ino
ESP32-DWM1000/Sketches/DelayCalib/: DelayCalib.ino
ESP32-DWM1000/Sketches/Tags/Tag/: Tag.ino
ESP32-DWM1000/Sketches/Tags/Tag_1/: Tag_1.ino
ESP32-DWM1000/Sketches/Tags/Tag_1_Loc_Dev/: Anchor.h  PosEstimator.h
F103_TDOA2_TAG/: .mxproject  CMakeLists.txt  F103_TDOA2_TAG.ioc  build.ninja  cmake_install.cmake
F103_TDOA2_TAG/Core/Inc/: lpsTdoa2Tag.h  queue.h  spi.h  uwb.h
F103_TDOA2_TAG/Core/Inc/tdoa/: tdoaEngine.h  tdoaEngineInstance.h
F103_TDOA2_TAG/Core/Src/: gpio.c  lpsTdoa2Tag.c  main.c  spi.c  usart.c  uwb.c
F103_TDOA2_TAG/Core/Src/clockCorrection/: clockCorrectionEngine.c
F103_TDOA2_TAG/Core/Src/tdoa/: tdoaStorage.c
F429-DWM1000/: .project
F429-DWM1000/Core/Inc/: stm32f4xx_hal_conf.h
F429-DWM1000/Core/Src/: main.cpp  stm32f4xx_hal_msp.c
F429-DWM1000/Core/Src/decadriver/: deca_regs.h
F429-DWM1000/Core/Src/dw1000_lib/: DW1000.cpp  DW1000.h  DW1000Device.h  DW1000Ranging.cpp  DW1000Time.cpp  DW1000Types.h
F429-DWM1000/Core/Src/platform/: deca_spi.c  port.c
F429-DWM1000/Debug/: F429-DWM1000.elf  F429-DWM1000.list  F429-DWM1000.map  makefile  objects.list  sources.mk
F429-DWM1000/Debug/Core/Src/: main.cyclo  main.d  main.su  stm32f4xx_hal_msp.cyclo  stm32f4xx_it.cyclo  stm32f4xx_it.su  subdir.mk
F429-DWM1000/Debug/Core/Src/decadriver/: deca_device.cyclo  deca_device.d  deca_device.su  subdir.mk
F429-DWM1000/Debug/Core/Src/dw1000_lib/: DW1000.d  DW1000Device.cyclo  DW1000Device.d  DW1000Device.su  DW1000Mac.cyclo  DW1000Mac.d  DW1000Ranging.d  subdir.mk
F429-DWM1000/Debug/Core/Src/platform/: deca_mutex.d  deca_sleep.d  deca_spi.d  port.cyclo  port.d  port.su  subdir.mk
F429-DWM1000/Debug/Drivers/STM32F4xx_HAL_Driver/Src/: subdir.mk
LPS-F103/: .mxproject  CMakeCache.txt  CMakeLists.txt  LPS-F103.ioc
LPS-F103/Core/Inc/: FreeRTOSConfig.h  bootmode.h  button.h  cfg.h  fonts.h  led.h  lpp.h  main.h  port.h  ssd1306.h  stm32f1xx_hal_conf.h  usbcomm.h  uwb.h
LPS-F103/Core/Inc/f1/: usart.h  usbd_conf.h
LPS-F103/Core/Src/: bootmode.c  button.c  cfg.c  dwOps.c  eeprom.c  fonts.c  led.c  lpp.c  lps25h.c  main.c  ssd1306.c  stm32f1xx_it.c  usbd_cdc_if.c  uwb.c  uwb_configurator.c  uwb_sniffer.c  uwb_tdoa_anchor2.c  uwb_tdoa_anchor3.c  uwb_twr_anchor.c  uwb_twr_tag.c
LPS-F103/Core/Src/f1/: gpio.c  i2c.c  spi.c  system.c  usart.c  usbd_conf.c
LPS-F103/Drivers/STM32F1xx_HAL_Driver/Src/: stm32f1xx_hal_i2c.c
LPS-F103/STM32_USB_Device_Library/Class/CDC/Inc/: usbd_cdc.h
LPS-F103/STM32_USB_Device_Library/Class/CDC/Src/: usbd_cdc.c
LPS-F103/STM32_USB_Device_Library/Core/Inc/: usbd_conf_template.h
LPS-F103/cmake/stm32cubemx/: CMakeLists.txt
LPS-F103/freertos/inc/: event_groups.h  mpu_prototypes.h
LPS-F103/freertos/src/: timers.c
STM32-DWM1000/: notes
STM32-DWM1000/.metadata/: .log4j2.xml  version.ini
STM32-DWM1000/.metadata/.plugins/org.eclipse.cdt.core/: DecaWave_Nucleo.language.settings.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.cdt.dsf.ui/: dialog_settings.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.cdt.ui/: dialog_settings.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.core.resources/: 9.snap
STM32-DWM1000/.metadata/.plugins/org.eclipse.core.resources/.root/: 9.tree
STM32-DWM1000/.metadata/.plugins/org.eclipse.core.resources/.safetable/: org.eclipse.core.resources
STM32-DWM1000/.metadata/.plugins/org.eclipse.debug.ui/: dialog_settings.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.e4.workbench/: workbench.xmi
STM32-DWM1000/.metadata/.plugins/org.eclipse.ui.ide/: dialog_settings.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.ui.workbench/: workingsets.xml
STM32-DWM1000/.metadata/.plugins/org.eclipse.ui.workbench.texteditor/: dialog_settings.xml
STM32-DWM1000/DecaWave_Nucleo/: .cproject  .mxproject  .project
STM32-DWM1000/DecaWave_Nucleo/Core/Src/: main.cpp  stm32f3xx_it.c
STM32-DWM1000/DecaWave_Nucleo/Core/Src/dw1000_lib/: DW1000.h  DW1000Ranging.h
STM32-DWM1000/DecaWave_Nucleo/Core/Src/platform/: deca_spi.c  port.h
STM32-DWM1000/DecaWave_Nucleo/Debug/: DecaWave_Nucleo.elf  DecaWave_Nucleo.list  DecaWave_Nucleo.map  makefile  objects.list  sources.mk
STM32-DWM1000/DecaWave_Nucleo/Debug/Core/Src/: RANGING_DEV_main.cyclo  RANGING_DEV_main.d  RANGING_DEV_main.su  main.cyclo  main.d  main.su  stm32f3xx_hal_msp.cyclo  stm32f3xx_hal_msp.su  stm32f3xx_hal_timebase_tim.d  stm32f3xx_it.cyclo  stm32f3xx_it.su  subdir.mk
STM32-DWM1000/DecaWave_Nucleo/Debug/Core/Startup/: subdir.mk
TDOA2_TAG_MODULE/: CMakeCache.txt  CMakeLists.txt  TDOA2_TAG_MODULE.ioc  build.ninja  cmake_install.cmake  compile_commands.json
TDOA2_TAG_MODULE/Core/Inc/: lpsTdoa2Tag.h  mac.h  measurement_types.h  uart_packet_send.h  uwb.h
TDOA2_TAG_MODULE/Core/Inc/clockCorrection/: clockCorrectionEngine.h
TDOA2_TAG_MODULE/Core/Inc/tdoa/: tdoaEngine.h  tdoaStorage.h
TDOA2_TAG_MODULE/Core/Src/: gpio.c  lpsTdoa2Tag.c  main.c  stm32f1xx_it.c  uart_packet_send.c  usart.c  uwb.c
TDOA2_TAG_MODULE/Core/Src/tdoa/: tdoaEngine.c  tdoaEngineInstance.c
TDOA2_TAG_MODULE/cmake/stm32cubemx/: CMakeLists.txt  cmake_install.cmake
legacy/DWM1000_LIB/src/: DW1000.cpp  DW1000Ranging.cpp
legacy/ESP32-DWM1000/Sketches/Anchor/: Anchor.ino
legacy/ESP32-DWM1000/Sketches/Anchor/anchor_2/: anchor_2.ino
legacy/ESP32-DWM1000/Sketches/Anchor/anchor_3/: anchor_3.ino
legacy/ESP32-DWM1000/Sketches/BasicReceiver/: BasicReceiver.ino
legacy/ESP32-DWM1000/Sketches/Tags/Tag_1_Loc_Dev/: Tag_1_Loc_Dev.ino
legacy/F429-DWM1000/: .cproject  .mxproject  F429-DWM1000 Debug.launch  F429-DWM1000.ioc
legacy/F429-DWM1000/Core/Inc/: main.h  stm32f4xx_it.h
legacy/F429-DWM1000/Core/Src/: stm32f4xx_it.c
legacy/STM32-DWM1000/DecaWave_Nucleo/: DecaWave_Nucleo Debug.launch  DecaWave_Nucleo.ioc  Test_Proj_Nucleo Debug.launch
(+48 files in other folders)
